[project]
name = "gemai"
requires-python = ">=3.8"
version = "0.1.0"
description = "Gemini integration"
readme = "README.md"
authors = [
    { name = "MUGISHA Eloge", email = "mugisheloge@gmail.com" }
   
    ]
dynamic = ["dependencies"]

[project.scripts]
start-gemai = "gemai.app:main"

[build-system]
requires= ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}

[project.urls]
repository = "https://github.com/EloM28/Gemai"